Fix bug 454182: message (part) size display: please follow BinaryUnitDialect everywhere

BUG: 454182
FIXED-IN: 5.20.2